<resources>
  <string name="app_name">SIMAB Mobile</string>
  <string name="try_again_btn">Retry</string>
  <string name="message_error_has_occurred">An error has occurred</string>

  <string name="title_activity_splash_screen">SplashScreen</string>
  <!-- Strings used for fragments for navigation -->
  <string name="first_fragment_label">First Fragment</string>
  <string name="second_fragment_label">Second Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>

  <string name="hello_first_fragment">Hello first fragment</string>
  <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
  <string name="title_activity_home">Home</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="menu_home">Home</string>
  <string name="menu_all">Menu</string>
  <string name="menu_gallery">Rekap CR</string>
  <string name="menu_slideshow">Notifikasi</string>
  <string name="menu_setting">Setting</string>
</resources>
