<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/home_menu"
                android:icon="@drawable/home"
                android:title="@string/menu_home" />
        <item
                android:id="@+id/search_menu"
                android:icon="@drawable/rekap"
                android:title="@string/menu_gallery" />
        <item
                android:id="@+id/favorite_menu"
                android:icon="@drawable/notif"
                android:title="@string/menu_slideshow" />
        <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/setting"
                android:title="@string/menu_setting" />
    </group>
</menu>